--- a/uj/zajecia/24-25l/ljk5/index.html
+++ b/uj/zajecia/24-25l/ljk5/index.html
@@ -114,8 +114,8 @@
 			<tr>
 				<th scope="row">1</th>
 				<td>26 lutego 2025</td>
-				<td class="schedule-lecture" rowspan="4">Zajęcia</td>
-				<td class="schedule-lecture" rowspan="4"><a href="uj/zajecia/24-25l/ljk5/zajecia/czytanie/1">Arkusz 1</a></td>
+				<td class="schedule-lecture" rowspan="3">Zajęcia</td>
+				<td class="schedule-lecture" rowspan="3"><a href="uj/zajecia/24-25l/ljk5/zajecia/czytanie/1">Arkusz 1</a></td>
 			</tr>
 			<tr>
 				<th scope="row">2</th>
@@ -126,83 +126,53 @@
 				<td>12 marca 2025</td>
 			</tr>
 			<tr>
-				<th scope="row">4</th>
-				<td>19 marca 2025</td>
-			</tr>
-		</tbody>
-		<tbody>
-			<tr>
-				<th scope="row" rowspan="2">5</th>
+				<th scope="row" rowspan="2">4</th>
 				<td rowspan="2">26 marca 2025</td>
-				<td class="schedule-exam" colspan="2"><!--a href="uj/zajecia/24-25l/ljk5/testy/1"-->Kolokwium 1<!--/a--></td>
+				<td class="schedule-exam" colspan="2"><a href="uj/zajecia/24-25l/ljk5/testy/czytanie/1">Kolokwium 1</a></td>
 			</tr>
 			<tr>
-				<td class="schedule-lecture" rowspan="4">Zajęcia</td>
-				<td class="schedule-lecture" rowspan="4"><!--a href="uj/zajecia/24-25l/ljk5/zajecia/2"-->Arkusz 2<!--/a--></td>
+				<td class="schedule-lecture" rowspan="5">Zajęcia</td>
+				<td class="schedule-lecture" rowspan="5"><!--a href="uj/zajecia/24-25l/ljk5/zajecia/2"-->Arkusz 2<!--/a--></td>
+			</tr>
+			<tr>
+				<th scope="row">5</th>
+				<td>23 kwietnia 2025</td>
 			</tr>
 			<tr>
 				<th scope="row">6</th>
-				<td>2 kwietnia 2025</td>
+				<td>30 kwietnia 2025</td>
 			</tr>
 			<tr>
 				<th scope="row">7</th>
-				<td>9 kwietnia 2025</td>
+				<td>7 maja 2025</td>
 			</tr>
 			<tr>
 				<th scope="row">8</th>
-				<td>16 kwietnia 2025</td>
+				<td>14 maja 2025</td>
 			</tr>
-		</tbody>
-		<tbody>
 			<tr>
 				<th scope="row" rowspan="2">9</th>
-				<td rowspan="2">23 kwietnia 2025</td>
-				<td class="schedule-exam" colspan="2"><!--a href="uj/zajecia/24-25l/ljk5/testy/2"-->Kolokwium 2<!--/a--></td>
+				<td rowspan="2">21 maja 2025</td>
+				<td class="schedule-exam" colspan="2"><!--a href="uj/zajecia/24-25l/ljk5/testy/3"-->Kolokwium 2<!--/a--></td>
 			</tr>
 			<tr>
 				<td class="schedule-lecture" rowspan="4">Zajęcia</td>
 				<td class="schedule-lecture" rowspan="4"><!--a href="uj/zajecia/24-25l/ljk5/zajecia/3"-->Arkusz 3<!--/a--></td>
 			</tr>
-			</tr>
 			<tr>
 				<th scope="row">10</th>
-				<td>30 kwietnia 2025</td>
-			</tr>
-			<tr>
-				<th scope="row">11</th>
-				<td>7 maja 2025</td>
-			</tr>
-			<tr>
-				<th scope="row">12</th>
-				<td>14 maja 2025</td>
-			</tr>
-		</tbody>
-		<tbody>
-			<tr>
-				<th scope="row" rowspan="2">13</th>
-				<td rowspan="2">21 maja 2025</td>
-				<td class="schedule-exam" colspan="2"><!--a href="uj/zajecia/24-25l/ljk5/testy/3"-->Kolokwium 3<!--/a--></td>
-			</tr>
-			<tr>
-				<td class="schedule-lecture" rowspan="4">Zajęcia</td>
-				<td class="schedule-lecture" rowspan="4"><!--a href="uj/zajecia/24-25l/ljk5/zajecia/4"-->Arkusz 4<!--/a--></td>
-			</tr>
-			<tr>
-				<th scope="row">14</th>
 				<td>28 maja 2025</td>
 			</tr>
 			<tr>
-				<th scope="row">15</th>
+				<th scope="row">11</th>
 				<td>4 czerwca 2025</td>
 			</tr>
 			<tr>
-				<th scope="row">16</th>
+				<th scope="row">12</th>
 				<td>11 czerwca 2025</td>
 			</tr>
-		</tbody>
-		<tbody>
 			<tr>
-				<th scope="row">17</th>
+				<th scope="row">13</th>
 				<td>18 czerwca 2025</td>
 				<td class="schedule-exam" colspan="2"><!--a href="uj/zajecia/24-25l/ljk5/testy/4"-->Egzamin <nobr>(9.00–10.00, s. 2.05)</nobr></a></td>
 			</tr>
@@ -228,7 +198,7 @@
 			<tr>
 				<th scope="row">1</th>
 				<td>26 lutego 2025</td>
-				<td class="schedule-lecture" rowspan="4">Zajęcia</td>
+				<td class="schedule-lecture" rowspan="3">Zajęcia</td>
 				<td class="schedule-lecture" rowspan="2">starzenie się społeczeństwa</td>
 				<td class="schedule-lecture" rowspan="2"><a href="uj/zajecia/24-25l/ljk5/zajecia/tlumaczenie/1">“병원 싫다” 자택서 눈감은 노모, 가족과 대화 속 떠나</a></td>
 			</tr>
@@ -243,40 +213,36 @@
 				<td class="schedule-lecture"><a href="uj/zajecia/24-25l/ljk5/zajecia/tlumaczenie/2">단군 신화</a></td>
 			</tr>
 			<tr>
-				<th scope="row">4</th>
-				<td>19 marca 2025</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"></td>
-			</tr>
-		</tbody>
-		<tbody>
-			<tr>
-				<th scope="row" rowspan="2">5</th>
+				<th scope="row" rowspan="2">4</th>
 				<td rowspan="2">26 marca 2025</td>
-				<td class="schedule-exam"><!--a href="uj/zajecia/24-25l/ljk5/testy/1"-->Kolokwium 1<!--/a--></td>
-				<td class="schedule-exam"></td>
-				<td class="schedule-exam"></td>
+				<td class="schedule-exam">Kolokwium 1</td>
+				<td class="schedule-exam" colspan="2"><a href="uj/zajecia/24-25l/ljk5/testy/tlumaczenie/1">starzenie się społeczeństwa</a></td>
 			</tr>
 			<tr>
-				<td class="schedule-lecture" rowspan="3">Zajęcia</td>
-				<td class="schedule-lecture">zwierzęta</td>
-				<td class="schedule-lecture"><a href="uj/zajecia/24-25l/ljk5/zajecia/tlumaczenie/3">DMZ 지역에 사는 동물들</a></td>
+				<td class="schedule-lecture" rowspan="4">Zajęcia</td>
+				<td class="schedule-lecture" rowspan="2">zwierzęta</td>
+				<td class="schedule-lecture" rowspan="2"><a href="uj/zajecia/24-25l/ljk5/zajecia/tlumaczenie/3">DMZ 지역에 사는 동물들</a></td>
+			</tr>
+			<tr>
+				<th scope="row">5</th>
+				<td>23 kwietnia 2025</td>
+			</tr>
 			</tr>
 			<tr>
 				<th scope="row">6</th>
-				<td>2 kwietnia 2025</td>
-				<td class="schedule-lecture"><!--Korea Północna--></td>
+				<td>30 kwietnia 2025</td>
+				<td class="schedule-lecture"></td>
 				<td class="schedule-lecture"></td>
 			</tr>
 			<tr>
 				<th scope="row">7</th>
-				<td>9 kwietnia 2025</td>
+				<td>7 maja 2025</td>
 				<td class="schedule-lecture"></td>
 				<td class="schedule-lecture"></td>
 			</tr>
 			<tr>
-				<th scope="row" rowspan="3">8</th>
-				<td rowspan="3">16 kwietnia 2025</td>
+				<th scope="row" rowspan="6">8</th>
+				<td rowspan="6">14 maja 2025</td>
 				<td class="schedule-presentation">Praca domowa 1</td>
 				<td class="schedule-presentation">Karolina Tkacz - webtoony</td>
 				<td class="schedule-presentation"></td>
@@ -288,41 +254,12 @@
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Praca domowa 3</td>
-				<td class="schedule-presentation">Aleksandra Maksylewicz</td>
+				<td class="schedule-presentation">Aleksandra Maksylewicz - samobójstwa (statystyki)</td>
 				<td class="schedule-presentation"></td>
 			</tr>
-		</tbody>
-		<tbody>
-			<tr>
-				<th scope="row" rowspan="2">9</th>
-				<td rowspan="2">23 kwietnia 2025</td>
-				<td class="schedule-exam"><!--a href="uj/zajecia/24-25l/ljk5/testy/tlumaczenie/2"-->Kolokwium 2<!--/a--></td>
-				<td class="schedule-exam"></td>
-				<td class="schedule-exam"></td>
-			</tr>
-			<tr>
-				<td class="schedule-lecture" rowspan="3">Zajęcia</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"></td>
-			</tr>
-			</tr>
-			<tr>
-				<th scope="row">10</th>
-				<td>30 kwietnia 2025</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"></td>
-			</tr>
-			<tr>
-				<th scope="row">11</th>
-				<td>7 maja 2025</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"></td>
-			</tr>
-			<tr>
-				<th scope="row" rowspan="3">12</th>
-				<td rowspan="3">14 maja 2025</td>
+			<trt>
 				<td class="schedule-presentation">Praca domowa 4</td>
-				<td class="schedule-presentation">Gabriela Barabasz</td>
+				<td class="schedule-presentation">Gabriela Barabasz - przemysł kosmetyczny</td>
 				<td class="schedule-presentation"></td>
 			</tr>
 			<tr>
@@ -338,9 +275,9 @@
 		</tbody>
 		<tbody>
 			<tr>
-				<th scope="row" rowspan="2">13</th>
+				<th scope="row" rowspan="2">9</th>
 				<td rowspan="2">21 maja 2025</td>
-				<td class="schedule-exam"><!--a href="uj/zajecia/24-25l/ljk5/testy/tlumaczenie/3"-->Kolokwium 3<!--/a--></td>
+				<td class="schedule-exam"><!--a href="uj/zajecia/24-25l/ljk5/testy/tlumaczenie/2"-->Kolokwium 2<!--/a--></td>
 				<td class="schedule-exam"></td>
 				<td class="schedule-exam"></td>
 			</tr>
@@ -350,19 +287,19 @@
 				<td class="schedule-lecture"></td>
 			</tr>
 			<tr>
-				<th scope="row">14</th>
+				<th scope="row">10</th>
 				<td>28 maja 2025</td>
 				<td class="schedule-lecture"></td>
 				<td class="schedule-lecture"></td>
 			</tr>
 			<tr>
-				<th scope="row">15</th>
+				<th scope="row">11</th>
 				<td>4 czerwca 2025</td>
 				<td class="schedule-lecture"></td>
 				<td class="schedule-lecture"></td>
 			</tr>
 			<tr>
-				<th scope="row" rowspan="4">16</th>
+				<th scope="row" rowspan="4">12</th>
 				<td rowspan="4">11 czerwca 2025</td>
 				<td class="schedule-presentation">Praca domowa 7</td>
 				<td class="schedule-presentation">Natalia Gadomska - polityczne podziały w Korei Płd. / posiadanie broni jądrowej przez Koreę Płd. / urbanizacja w Seulu</td>
@@ -386,7 +323,7 @@
 		</tbody>
 		<tbody>
 			<tr>
-				<th scope="row">17</th>
+				<th scope="row">13</th>
 				<td>18 czerwca 2025</td>
 				<td class="schedule-exam"><!--a href="uj/zajecia/24-25l/ljk5/testy/tlumaczenie/4"-->Egzamin <nobr>(10.15–11.15, s. 2.05)</nobr></a></td>
 				<td class="schedule-exam"></td>
@@ -403,7 +340,7 @@
 		<thead>
 			<tr>
 				<th scope="col">Tydzień</th>
-				<th scope="col">Data</th>f
+				<th scope="col">Data</th>
 				<th scope="col">Rodzaj</th>
 				<th scope="col">Temat</th>
 			</tr>
@@ -418,30 +355,30 @@
 			</tr>
 			<tr>
 				<th scope="row">2</th>
-				<td>13 marca 2025</td>
+				<td>24 kwietnia 2025</td>
 				<td class="schedule-lecture"></td>
 			</tr>
 			<tr>
 				<th scope="row">3</th>
-				<td>20 marca 2025</td>
+				<td>8 maja 2025</td>
 				<td class="schedule-lecture"></td>
 			</tr>
 			<tr>
 				<th scope="row">4</th>
-				<td>27 marca 2025</td>
+				<td>15 maja 2025</td>
 				<td class="schedule-lecture"></td>
 			</tr>
 			<tr>
 				<th scope="row">5</th>
-				<td>3 kwietnia 2025</td>
+				<td>22 maja 2025</td>
 				<td class="schedule-lecture"></td>
 			</tr>
 		</tbody>
 		<tbody>
 			<tr>
 				<th scope="row" rowspan="2">6</th>
-				<td rowspan="2">10 kwietnia 2025</td>
-				<td class="schedule-exam"><!--a href="uj/zajecia/24-25l/ljk5/testy/1"-->Kolokwium 1<!--/a--></td>
+				<td rowspan="2">29 maja 2025</td>
+				<td class="schedule-exam"><!--a href="uj/zajecia/24-25l/ljk5/testy/tlumaczenie/2"-->Kolokwium<!--/a--></td>
 				<td class="schedule-exam"></td>
 			</tr>
 			<tr>
@@ -450,55 +387,23 @@
 			</tr>
 			<tr>
 				<th scope="row">7</th>
-				<td>24 kwietnia 2025</td>
-				<td class="schedule-lecture"></td>
-			</tr>
-			<tr>
-				<th scope="row">8</th>
-				<td>8 maja 2025</td>
-				<td class="schedule-lecture"></td>
-			</tr>
-			<tr>
-				<th scope="row">9</th>
-				<td>15 maja 2025</td>
-				<td class="schedule-lecture"></td>
-			</tr>
-			<tr>
-				<th scope="row">10</th>
-				<td>22 maja 2025</td>
-				<td class="schedule-lecture"></td>
-			</tr>
-		</tbody>
-		<tbody>
-			<tr>
-				<th scope="row" rowspan="2">11</th>
-				<td rowspan="2">29 maja 2025</td>
-				<td class="schedule-exam"><!--a href="uj/zajecia/24-25l/ljk5/testy/tlumaczenie/2"-->Kolokwium 2<!--/a--></td>
-				<td class="schedule-exam"></td>
-			</tr>
-			<tr>
-				<td class="schedule-lecture" rowspan="5">Zajęcia</td>
-				<td class="schedule-lecture"></td>
-			</tr>
-			<tr>
-				<th scope="row">12</th>
 				<td>5 czerwca 2025</td>
 				<td class="schedule-lecture"></td>
 			</tr>
 			<tr>
-				<th scope="row">13</th>
+				<th scope="row">8</th>
 				<td>12 czerwca 2025</td>
 				<td class="schedule-lecture"></td>
 			</tr>
 			<tr>
-				<th scope="row">14</th>
+				<th scope="row">9</th>
 				<td>19 czerwca 2025</td>
 				<td class="schedule-lecture"></td>
 			</tr>
 		</tbody>
 		<tbody>
 			<tr>
-				<th scope="row">15</th>
+				<th scope="row">10</th>
 				<td>26 czerwca 2025</td>
 				<td class="schedule-exam"><!--a href="uj/zajecia/24-25l/ljk5/testy/tlumaczenie/4"-->Egzamin <nobr>(10.00–11.00, s. 2.01)</nobr></a></td>
 				<td class="schedule-exam"></td>
