--- a/uj/zajecia/24-25l/ljk5/testy/czytanie/1/index.html
+++ b/uj/zajecia/24-25l/ljk5/testy/czytanie/1/index.html
@@ -39,13 +39,13 @@
 		<li>제 눈의 안경</li>
 		<li>엎질러진 물</li>
 		<li>싼 게 비지떡</li>
-		<li>티끌 모아 태산</li>
+		<li>티끌 모아 태산 <strong class="correct">✓</strong></li>
 	</ol>
 	<h3>2. 윗글의 내용과 같은 것을 고르십시오.</h3>
 	<ol>
 		<li>생활 속에서 동전의 활용성을 높여야 한다.</li>
 		<li>다른 사람을 도와주려면 큰돈을 모아야 한다.</li>
-		<li>참된 기부는 자신보다 남을 먼저 생각해야 한다.</li>
+		<li>참된 기부는 자신보다 남을 먼저 생각해야 한다. <strong class="correct">✓</strong></li>
 		<li>큰돈을 모으려면 아끼고 절약하는 습관을 길러야 한다.</li>
 	</ol>
 </div>
@@ -79,12 +79,12 @@
 	<ol>
 		<li>답답하다</li>
 		<li>서운하다</li>
-		<li>당황스럽다</li>
+		<li>당황스럽다 <strong class="correct">✓</strong></li>
 		<li>불만스럽다</li>
 	</ol>
 	<h3>4. 윗글의 내용과 같은 것을 고르십시오.</h3>
 	<ol>
-		<li>나는 첫째부터 목욕시키려고 했다.</li>
+		<li>나는 첫째부터 목욕시키려고 했다. <strong class="correct">✓</strong></li>
 		<li>첫째는 늘 동생에게 양보해야 했다.</li>
 		<li>첫째는 자신의 마음을 자주 표현했다.</li>
 		<li>나는 첫째가 씻지 않으려고 해서 화를 냈다.</li>
@@ -105,7 +105,7 @@
 	<ol>
 		<li>영화 ‘사랑’에 대한 평가가 예상과 달리 좋지 않다.</li>
 		<li>영화 ‘사랑’의 개봉을 기대하고 있는 사람들이 많다.</li>
-		<li>영화 ‘사랑’에 대한 기대감이 높아 오만 명이 관람하였다.</li>
+		<li>영화 ‘사랑’에 대한 기대감이 높아 오만 명이 관람하였다. <strong class="correct">✓</strong></li>
 		<li>영화 ‘사랑’의 평가가 나빠서 오만 관객을 기대하기 어렵다.</li>
 	</ol>
 </div>
@@ -133,7 +133,7 @@
 		<p>고대 이집트 피라미드를 건축할 때 거대한 바위를 모래 위에서 운반해야 했는데 이를 위해서는 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 기술이 중요했다. 모래에 수분이 일정하게 유지되면 모랫길이 단단해져서 운반이 수월했기 때문이다. 실제로 고대 벽화에 바위를 운반하는 길 위에 사람들이 물을 뿌리고 있는 장면이 묘사되어 있다.</p>
 	</div>
 	<ol>
-		<li>적정량의 물을 뿌리는</li>
+		<li>적정량의 물을 뿌리는 <strong class="correct">✓</strong></li>
 		<li>모래를 부드럽게 만드는</li>
 		<li>바위의 무게를 계산하는</li>
 		<li>운반하는 사람들을 배치하는</li>
