--- a/uj/zajecia/24-25l/ljk5/zajecia/czytanie/1/index.html
+++ b/uj/zajecia/24-25l/ljk5/zajecia/czytanie/1/index.html
@@ -301,7 +301,7 @@
 	<ol>
 		<li>정수기가 우주인의 식수를 해결해 주었다.</li>
 		<li>동결 건조 식품은 바쁜 일반인들을 위해 개발되었다.</li>
-		<li>우주 과학 기술 덕분에 생활에 편리한 제품이 개발되었다.</li>
+		<li>우주 과학 기술 덕분에 생활에 편리한 제품이 개발되었다. <strong class="correct">✓</strong></li>
 		<li>통신, 의료 분야에서 개발된 기술이 우주인들을 위해 사용되었다.</li>
 	</ol>
 </div>
@@ -328,7 +328,7 @@
 		<li>조각보는 실용성보다 예술성이 강조되어 있다.</li>
 		<li>조각보는 큰 천을 여러 조각으로 잘라서 만들었다.</li>
 		<li>조각보는 색이 같고 모양이 다른 조각이 이어져 있다.</li>
-		<li>조각보에는 복을 기원하는 정성스러운 마음이 담겨 있다.=</li>
+		<li>조각보에는 복을 기원하는 정성스러운 마음이 담겨 있다. <strong class="correct">✓</strong></li>
 	</ol>
 </div>
 <div class="exam-question">
