--- a/uj/zajecia/24-25l/ljk5/zajecia/tlumaczenie/3/index.html
+++ b/uj/zajecia/24-25l/ljk5/zajecia/tlumaczenie/3/index.html
@@ -55,11 +55,29 @@
 <h3>번역</h3>
 
 <p>0. DMZ 지역에 사는 동물들</p>
+<ul>
+	<li>Zwierzęta żyjące w strefie zdemilitaryzowanej (DMZ)</li>
+</ul>
 <p>1. 한국의 멸종위기 동물들의 보금자리, DMZ와 DMZ 일원에 사는 동물들을 만나보세요.</p>
+<ul>
+	<li>Poznajmy koreańskie zwierzęta zagrożone wyginięciem, które znalazły schronienie na obszarze strefy zdemilitaryzowanej.</li>
+</ul>
 <p>2. DMZ 일대는 6.25 전쟁 이후 70여 년 동안 인간의 간섭이 최소화되면서 훼손된 자연은 스스로 회복했습니다.</p>
+<ul>
+	<li>Przez ponad 70 lat po wojnie koreańskiej obszar DMZ był minimalnie naruszany przez człowieka, co pozwoliło zniszczonej przyrodzie na odrodzenie się.</li>
+</ul>
 <p>3. 그 결과 우리 주변에서 찾아볼 수 없는 새로운 생태계를 구축하고 야생동물의 안식처가 되었습니다.</p>
+<ul>
+	<li>W wyniku tego powstał nowy ekosystem, którego nie można znaleźć w żadnym innym miejscu, zapewniający schronienie dla dzikich zwierząt.</li>
+</ul>
 <p>4. DMZ 일원에는 식물, 포유류, 조류, 양서파충류, 육상곤충, 담수어류, 무척추동물, 거미 등 총 6,168여 종의 야생 생물들이 살고 있는 것으로 조사되었습니다.</p>
+<ul>
+	<li>Na całym terenie DMZ żyje około 6168 gatunków dzikich roślin, ssaków, ptaków, płazów, gadów, ryb słodkowodnych, bezkręgowców oraz pająków.</li>
+</ul>
 <p>5. 특히 한국의 멸종위기 야생생물 267여 종 중에서 102여 종(38%)이 DMZ에 살고 있습니다. </p>
+<ul>
+	<li>W szczególności na terenie DMZ żyje 102 (38%) z 267 gatunków zagrożonych wyginięciem w Korei Południowej.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -82,18 +100,56 @@
 <h3>번역</h3>
 
 <p>6. 국립생태원에서는 DMZ 내에 무인생태조사 카메라를 설치하여 생물 조사를 하고 있습니다.</p>
+<ul>
+	<li>Południowokoreański Państwowy Instytut Ekologii w celu badania przyrody zainstalował kamery leśne na obszarze DMZ.</li>
+</ul>
 <p>7. DMZ 내에 설치된 무인생태조사 카메라에는 다양한 멸종위기생물들이 포착되었습니다.</p>
+<ul>
+	<li>Zarejestrowały one wiele różnorodnych zagrożonych gatunków.</li>
+</ul>
 <p>8. 우연히 찍혔지만 그래서 더욱 생생한 DMZ의 생물들을 만나볼 수 있습니다.</p>
+<ul>
+	<li>Dzięki przypadkowym nagraniom jesteśmy w stanie zaobserwować, jak stworzenia te żyją w swoim naturalnym środowisku.</li>
+</ul>
 <p>9. 두루미</p>
+<ul>
+	<li>Żuraw mandżurski</li>
+</ul>
 <p>10. DMZ는 세계적 멸종위기종인 두루미의 월동지로 매우 중요한 곳입니다.</p>
+<ul>
+	<li>Strefa zdemilitaryzowana jest bardzo ważnym miejscem zimowania dla żurawia mandżurskiego, który na całym świecie zagrożony jest wyginięciem.</li>
+</ul>
 <p>11-1. 전 세계의 15종의 두루미 중 한국에서 발견된 두루미는 7종이며</p>
+<ul>
+	<li>W Korei Południowej można spotkać 7 z 15 żyjących gatunków żurawi,</li>
+</ul>
 <p>11-2. DMZ 일원에서는 두루미와 재두루미를 가장 많이 볼 수 있습니다. </p>
+<ul>
+	<li>na obszarze DMZ zaś najczęściej możemy zobaczyć żurawia mandżurskiego i białoszyjnego.</li>
+</ul>
 <p>12. 산양</p>
+<ul>
+	<li>Goral długoogonowy</li>
+</ul>
 <p>13-1. 천연기념물 제217호이자 멸종위기 야생생물 1급인 산양은</p>
+<ul>
+	<li>Goral długoogonowy, pomnik przyrody nr 217 oraz 1. kategorii gatunek zagrożony wyginięciem,</li>
+</ul>
 <p>13-2. DMZ 주변의 산악지역 바위산에서 주로 살고 있습니다.</p>
+<ul>
+	<li>żyje głównie na skalistych terenach górskich strefy DMZ.</li>
+</ul>
 <p>14. 바위와 비슷한 회갈색이라 멀리서 발견하기 쉽지 않습니다.</p>
+<ul>
+	<li>Szarobrązowe umaszczenie gorala w barwach podobnych do skał sprawia, że ciężko go zauważyć z daleka.</li>
+</ul>
+
+<h2 class="homework">숙제</h2>
+
 <p>15-1. 산양은 ‘살아있는 화석’이라고도 불리는데</p>
 <p>15-2. 지구에서 처음 발견되었을 때와 지금 모습이 거의 같기 때문입니다.</p>
+
+<hr class="homework">
 
 <h3>어휘</h3>
 
@@ -151,7 +207,7 @@
 	<li>검독수리 - orzeł przedni</li>
 	<li>민통선지역 = 민간인 출입통제선 지역</li>
 	<li>유독 - szczególnie</li>
-	<li>월동하다 - spędzać zimę</li>
+	<li>월동하다 - zimować</li>
 	<li>굶주리다 - być wygłodzonym</li>
 	<li>돌려보내다 - wypuścić (np. na wolność)</li>
 	<li>조화 - harmonia</li>
@@ -165,6 +221,106 @@
 <p>27. 주민들이 굶주린 검독수리들에게 먹이도 주고 보호하며 자연으로 돌려보내기 때문입니다.</p>
 <p>28-1. 생물들과 조화롭게 살아가는 민통선지역 주민들의 모습에서</p>
 <p>28-2. 인간과 자연이 공존하는 DMZ의 미래를 그려볼 수 있습니다.</p>
+
+<h3>어휘</h3>
+
+<ul>
+	<li>반달가슴곰 - niedźwiedź himalajski</li>
+	<li>연구진 - zespół badawczy</li>
+	<li>번식 - rozmnażanie, rozród</li>
+	<li>추정 - przypuszczenie</li>
+	<li>더욱 = 더</li>
+	<li>밀렵 - kłusownictwo</li>
+	<li>감소하다 = 줄다</li>
+	<li>처하다 - znajdować się (np. w niebezpieczeństwie)</li>
+</ul>
+
+<h3>번역</h3>
+
+<p>29. 반달가슴곰</p>
+<p>30-1. 국립생태원 연구진이 설치해 놓은 무인카메라에</p>
+<p>30-2. 반달가슴곰 새끼가 20년 만에 확인되었습니다.</p>
+<p>31-1. 반달가슴곰의 새끼가 발견된 것은</p>
+<p>31-2. 번식을 하였다고 추정되어 더욱 희망적 의미가 있습니다.</p>
+<p>32-1. 반달가슴곰은 밀렵 및 서식지 감소 등의 이유로</p>
+<p>32-2. 개체수가 급감하여 멸종위기에 처해 있습니다.</p>
+
+<h3>어휘</h3>
+
+<ul>
+	<li>표범장지뱀 - jaszczurka mongolska (<i>eremias argus</i>)</li>
+	<li>표범 - lampart plamisty</li>
+	<li>얼룩 - plama</li>
+	<li>무늬 - wzór</li>
+	<li>이름을 붙이다 - nadać imię, nazwać</li>
+	<li>움직이다 - poruszać się</li>
+	<li>모래톱 - wydma</li>
+	<li>강변 - brzeg rzeki</li>
+	<li>풀밭 - łąka</li>
+	<li>돌 - kamień</li>
+	<li>흙 - ziemia</li>
+	<li>구멍 - nora, jama</li>
+	<li>파다 - kopać</li>
+	<li>집단 - grupa</li>
+	<li>활발하다 - być energicznym</li>
+	<li>안정적 - stabilny</li>
+</ul>
+
+<h3>번역</h3>
+
+<p>33. 표범장지뱀</p>
+<p>34-1. 표범처럼 얼룩무늬가 있다고 해서 붙여진 이름으로</p>
+<p>34-2. 움직임이 매우 빠릅니다.</p>
+<p>35-1. 주로 모래톱이나 강변의 풀밭, 돌 밑 또는 흙 속에 구멍을 파고 살며</p>
+<p>35-2. 곤충을 잡아먹습니다.</p>
+<p>36-1. 파괴로 대부분 사라졌으나</p>
+<p>36-2. DMZ 일원에서 집단으로 생활하며 활발하게 번식하고 있는 것이 확인되었습니다.</p>
+<p>37. 이렇게 안정적인 서식지를 발견하는 경우는 매우 드물다고 합니다.</p>
+
+<h3>어휘</h3>
+
+<ul>
+	<li>열목어 - lenok (gatunek ryby łososiokształtnej z rodziny łososiowatych)</li>
+	<li>연어과 - łososiowate</li>
+	<li>민물 - woda słodka</li>
+	<li>하천 - strumień</li>
+	<li>상류 - górny bieg</li>
+	<li>맑다 - być czystym (o wodzie)</li>
+	<li>최북단 - najbardziej wysunięty punkt na północ</li>
+	<li>두타연 - wąwóz Dutayeon</li>
+	<li>인간의 발길이 닿다 - być dotkniętym przez człowieka</li>
+	<li>청정하다 - być krystalicznie czystym</li>
+</ul>
+
+<h3>번역</h3>
+
+<p>38. 열목어</p>
+<p>38-1. 멸종위기종이자 연어과의 민물고기로</p>
+<p>38-2. 하천 상류의 맑고 차가운 물에서만 서식하는 열목어도</p>
+<p>38-3. DMZ 일원에 서식합니다.</p>
+<p>39-1. DMZ 남한 최북단 지역의 두타연은</p>
+<p>39-2. 수십 년 간 인간의 발길이 닿지 않은 청정지역으로</p>
+<p>39-3. 열목어의 국내 최대 서식지입니다.</p>
+
+<h3>어휘</h3>
+
+<ul>
+	<li>노란목도리담비 - kuna żółtogardła</li>
+	<li>행동권 - <a href="https://pl.wikipedia.org/wiki/Area%C5%82_osobniczy">areał osobniczy</a></li>
+	<li>꼭대기 - szczyt</li>
+	<li>포식자 - drapieżnik</li>
+	<li>무리 - stado</li>
+	<li>덩치가 크다 - być pokaźnych rozmiarów</li>
+</ul>
+
+<h3>번역</h3>
+
+<p>40. 노란목도리담비</p>
+<p>41-1. DMZ에서 살고 있는 노란목도리담비는</p>
+<p>41-2. 한국의 생태계에서 행동권이 넓고</p>
+<p>41-3. 먹이 피라미드에서 꼭대기에 있는 최고의 포식자 중 하나입니다.</p>
+<p>42-1. 2~6마리 정도의 작은 무리를 지어 돌아다니며</p>
+<p>42-2. 덩치가 큰 동물도 사냥할 수 있는 동물입니다.</p>
 
 <h2>Źródło:</h2>
 
