--- a/uj/zajecia/25-26z/assk/index.html
+++ b/uj/zajecia/25-26z/assk/index.html
@@ -110,7 +110,7 @@
 			</tr>
 			<tr>
 				<td class="schedule-lecture">Zajęcia 6</td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture"><a href="uj/zajecia/25-26z/assk/zajecia/4">malarstwo</a></td>
 			</tr>
 			<tr>
 				<th scope="row">7</th>
