--- a/uj/zajecia/25-26z/ljk4/zajecia/czytanie/1/index.html
+++ b/uj/zajecia/25-26z/ljk4/zajecia/czytanie/1/index.html
@@ -21,7 +21,7 @@
 		<li>지나거나</li>
 		<li>지나도록</li>
 		<li>지나거든</li>
-		<li>지날수록</li>
+		<li>지날수록 <strong class="correct">✓</strong></li>
 	</ol>
 </div>
 <div class="exam-question">
@@ -30,7 +30,7 @@
 	<ol>
 		<li>먹든지</li>
 		<li>먹거나</li>
-		<li>먹고 나서</li>
+		<li>먹고 나서 <strong class="correct">✓</strong></li>
 		<li>먹다 보면</li>
 	</ol>
 </div>
@@ -41,7 +41,7 @@
 	<p>먹구름이 몰려오는 걸 보니 비가 <u>올 모양이다</u>.</p>
 	<ol>
 		<li>오기도 한다</li>
-		<li>올 것만 같다</li>
+		<li>올 것만 같다 <strong class="correct">✓</strong></li>
 		<li>올 리가 없다</li>
 		<li>온 적이 없다</li>
 	</ol>
@@ -51,7 +51,7 @@
 	<p>아기가 자고 있어서 <u>깨지 않게</u> 조용히 방 안으로 들어갔다.</p>
 	<ol>
 		<li>깨지 않는지</li>
-		<li>깨지 않도록</li>
+		<li>깨지 않도록 <strong class="correct">✓</strong></li>
 		<li>깨지 않더니</li>
 		<li>깨지 않느라</li>
 	</ol>
@@ -64,7 +64,7 @@
 		<img src="uj/zajecia/25-26z/ljk4/zajecia/czytanie/1/img/5.png" alt="5">
 	</div>
 	<ol>
-		<li>자연 보호</li>
+		<li>자연 보호 <strong class="correct">✓</strong></li>
 		<li>시간 절약</li>
 		<li>자리 양보</li>
 		<li>안전 관리</li>
@@ -76,7 +76,7 @@
 		<img src="uj/zajecia/25-26z/ljk4/zajecia/czytanie/1/img/6.png" alt="5">
 	</div>
 	<ol>
-		<li>전화 예절</li>
+		<li>전화 예절 <strong class="correct">✓</strong></li>
 		<li>식사 예절</li>
 		<li>건강 관리</li>
 		<li>안전 관리</li>
@@ -88,7 +88,7 @@
 		<img src="uj/zajecia/25-26z/ljk4/zajecia/czytanie/1/img/7.png" alt="5">
 	</div>
 	<ol>
-		<li>환경 보호</li>
+		<li>환경 보호 <strong class="correct">✓</strong></li>
 		<li>공원 소개</li>
 		<li>날씨 정보</li>
 		<li>여행 계획</li>
@@ -103,7 +103,7 @@
 		<li>우체국</li>
 		<li>여행사</li>
 		<li>편의점</li>
-		<li>빨래방</li>
+		<li>빨래방 <strong class="correct">✓</strong></li>
 	</ol>
 </div>
 
@@ -115,7 +115,7 @@
 	</div>
 	<ol>
 		<li>이 대회는 이번에 처음으로 열린다.</li>
-		<li>이 대회에는 누구나 참가할 수 있다.</li>
+		<li>이 대회에는 누구나 참가할 수 있다. <strong class="correct">✓</strong></li>
 		<li>이 대회에 참가하려면 돈을 내야 한다.</li>
 		<li>이 대회의 출발 장소는 인주기념관이다.</li>
 	</ol>
@@ -129,7 +129,7 @@
 		<li>성인과 학생의 버스 요금이 같다.</li>
 		<li>이 버스는 별빛공원에서 출발한다.</li>
 		<li>매일 오전에 이 버스를 탈 수 있다.</li>
-		<li>이 버스를 타려면 미리 신청해야 한다.</li>
+		<li>이 버스를 타려면 미리 신청해야 한다. <strong class="correct">✓</strong></li>
 	</ol>
 </div>
 <div class="exam-question">
@@ -141,7 +141,7 @@
 		<li>만화카페는 만화방과 실내 분위기가 비슷하다.</li>
 		<li>만화카페는 주로 남성들에게 인기를 끌고 있다.</li>
 		<li>만화카페는 커피를 마시기 위한 곳으로 새롭게 태어났다.</li>
-		<li>만화카페는 볼거리와 먹을거리를 모두 즐길 수 있는 곳이다.</li>
+		<li>만화카페는 볼거리와 먹을거리를 모두 즐길 수 있는 곳이다. <strong class="correct">✓</strong></li>
 	</ol>
 </div>
 <div class="exam-question">
