--- a/viiilo/zajecia/25-26/jk2/index.html
+++ b/viiilo/zajecia/25-26/jk2/index.html
@@ -90,7 +90,7 @@
 			<tr>
 				<th scope="row">13</th>
 				<td>2026년 1월 28일</td>
-				<td class="schedule-lecture" colspan="2"></td>
+				<td class="schedule-lecture" colspan="2"><a href="viiilo/zajecia/25-26/jk2/zajecia/5">1. 무슨 음식을 좋아해요?</a></td>
 			</tr>
 		</tbody>
 	</table>
