--- a/uj/zajecia/24-25z/klc2/index.html
+++ b/uj/zajecia/24-25z/klc2/index.html
@@ -87,8 +87,8 @@
 				<td>21 October 2024</td>
 				<td class="schedule-lecture">Class 3</td>
 			</tr>
-		<tbody>
 		</tbody>
+		<tbody>
 			<tr>
 				<th scope="row">4</th>
 				<td>28 October 2024</td>
@@ -100,8 +100,8 @@
 				<td>4 November 2024</td>
 				<td class="schedule-lecture">Class 5</td>
 			</tr>
-		<tbody>
 		</tbody>
+		<tbody>
 			<tr>
 				<th scope="row">6</th>
 				<td>18 November 2024</td>
@@ -113,8 +113,8 @@
 				<td>25 November 2024</td>
 				<td class="schedule-lecture">Class 7</td>
 			</tr>
-		<tbody>
 		</tbody>
+		<tbody>
 			<tr>
 				<th scope="row" rowspan="11">8</th>
 				<td>2 December 2024</td>
@@ -162,16 +162,16 @@
 				<td class="schedule-exam">11:20–11:30</td>
 				<td class="schedule-exam">Dubert Karolina</td>
 			</tr>
-		<tbody>
 		</tbody>
+		<tbody>
 			<tr>
 				<th scope="row">9</th>
 				<td>9 December 2024</td>
 				<td class="schedule-lecture">Class 9</td>
 				<td class="schedule-lecture">세종한국어 회화 2 제4과</td>
 			</tr>
-		<tbody>
 		</tbody>
+		<tbody>
 			<tr>
 				<th scope="row">10</th>
 				<td>16 December 2024</td>
@@ -183,8 +183,8 @@
 				<td>13 January 2025</td>
 				<td class="schedule-lecture">Class 11</td>
 			</tr>
-		<tbody>
 		</tbody>
+		<tbody>
 			<tr>
 				<th scope="row">12</th>
 				<td>20 January 2025</td>
@@ -196,13 +196,49 @@
 				<td>27 January 2025</td>
 				<td class="schedule-lecture">Class 13</td>
 			</tr>
-		<tbody>
 		</tbody>
+		<tbody>
 			<tr>
-				<th scope="row">14</th>
-				<td>3 February 2025</td>
+				<th scope="row" rowspan="11">14</th>
+				<td rowspan="10">3 February 2025 <nobr>(room -1.15)</nobr></td>
 				<td class="schedule-exam">Exam</td>
-				<td class="schedule-exam">Final examination</td>
+				<td class="schedule-exam">Final Examination</td>
+			</tr>
+			<tr>
+				<td class="schedule-exam">13:00–13:10</td>
+				<td class="schedule-exam">Karol Łoś</td>
+			</tr>
+			<tr>
+				<td class="schedule-exam">13:10–13:20</td>
+				<td class="schedule-exam">Viktoriia Savitska</td>
+			</tr>
+			<tr>
+				<td class="schedule-exam">13:20–13:30</td>
+				<td class="schedule-exam">Patrycja Grabowska</td>
+			</tr>
+			<tr>
+				<td class="schedule-exam">13:30–13:40</td>
+				<td class="schedule-exam">Maja Kruszewska</td>
+			</tr>
+			<tr>
+				<td class="schedule-exam">13:40–13:50</td>
+				<td class="schedule-exam">Michał Baranowski</td>
+			</tr>
+			<tr>
+				<td class="schedule-exam">13:50–14:00</td>
+				<td class="schedule-exam">Karolina Dubert</td>
+			</tr>
+			<tr>
+				<td class="schedule-exam">14:00–14:10</td>
+				<td class="schedule-exam">Maria Mądra</td>
+			</tr>
+			<tr>
+				<td class="schedule-exam">14:10–14:20</td>
+				<td class="schedule-exam">Julia Trajdos</td>
+			</tr>
+			<tr>
+				<td class="schedule-exam">14:20–14:30</td>
+				<td class="schedule-exam">Agnieszka Mirowska</td>
 			</tr>
 		</tbody>
 	</table>
