--- a/uj/zajecia/25-26z/ljk4/testy/czytanie/3/6458595645356.html
+++ b/uj/zajecia/25-26z/ljk4/testy/czytanie/3/6458595645356.html
@@ -13,101 +13,227 @@
 
 <h1>Lektorat języka koreańskiego - poziom 4 (czytanie)</h1>
 
-<h2>Kolokwium 2 (czytanie, dodatkowe)</h2>
+<h2>기말고사</h2>
 
 <div class="exam-question">
-	<h3>1. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)에 들어갈 말로 가장 알맞은 것을 고르십시오.</h3>
-	<h4>이사 갈 집을 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 방학 때 좀 바빴다.</h4>
+	<h3>[1~2] (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)에 들어갈 말로 가장 알맞은 것을 고르십시오.</h3>
+	<h4>1. 친구와 내가 운동장에서 축구를 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 선생님이 나를 부르셨다.</h4>
 	<ol>
-		<li>찾더니</li>
-		<li>찾으려면</li>
-		<li>구하도록</li>
-		<li>구하느라고 <strong class="correct">✓</strong></li>
+		<li>하거나</li>
+		<li>하는데 <strong class="correct">✓</strong></li>
+		<li>하면서</li>
+		<li>하든지</li>
+	</ol>
+</div>
+<div class="exam-question">
+	<h4>2. 집에 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 비가 내리기 시작했다.</h4>
+	<ol>
+		<li>도착하거나</li>
+		<li>도착하니까 <strong class="correct">✓</strong></li>
+		<li>도착하거든</li>
+		<li>도착하려고</li>
 	</ol>
 </div>
 
 <div class="exam-question">
-	<h3>2. 밑줄 친 부분과 의미가 가장 비슷한 것을 고르십시오.</h3>
-	<h4>정부는 일자리를 <u>늘리고자</u> 새로운 정책을 수립했다.</h4>
+	<h3>[3~4]. 밑줄 친 부분과 의미가 가장 비슷한 것을 고르십시오.</h3>
+	<h4>3. 어제 본 공연은 눈물이 <u>날 정도로</u> 감동적이었다.</h4>
 	<ol>
-		<li>늘리자마자</li>
-		<li>늘리더라도</li>
-		<li>늘리는 대신</li>
-		<li>늘리기 위해 <strong class="correct">✓</strong></li>
+		<li>날 만큼 <strong class="correct">✓</strong></li>
+		<li>날까 봐</li>
+		<li>나는 대로</li>
+		<li>나는 대신에</li>
+	</ol>
+</div>
+<div class="exam-question">
+	<h4>4. 다른 옷가게에 <u>가 봐야</u> 값은 여기와 비슷할 것이다.</h4>
+	<ol>
+		<li>간다고 해도 <strong class="correct">✓</strong></li>
+		<li>간다고 치고</li>
+		<li>갈지도 몰라서</li>
+		<li>가기는 하지만</li>
 	</ol>
 </div>
 
 <div class="exam-question">
-	<h3>3. 다음은 무엇에 대한 글인지 고르십시오.</h3>
-	<h4><img src="uj/zajecia/25-26z/ljk4/testy/czytanie/2-1/img/3.png" alt="3"></h4>
+	<h3>[5~6]. 다음은 무엇에 대한 글인지 고르십시오.</h3>
+	<h4>5. <img src="uj/zajecia/25-26z/ljk4/testy/czytanie/3/img/5.png" alt="5"></h4>
 	<ol>
-		<li>상품 안내</li>
-		<li>모집 안내</li>
-		<li>문의 방법 <strong class="correct">✓</strong></li>
-		<li>사용 방법</li>
+		<li>신문 <strong class="correct">✓</strong></li>
+		<li>사전</li>
+		<li>시계</li>
+		<li>연필</li>
+	</ol>
+</div>
+<div class="exam-question">
+	<h4>6. <img src="uj/zajecia/25-26z/ljk4/testy/czytanie/3/img/6.png" alt="5"></h4>
+	<ol>
+		<li>수건</li>
+		<li>침대 <strong class="correct">✓</strong></li>
+		<li>시계</li>
+		<li>신발</li>
 	</ol>
 </div>
 
 <div class="exam-question">
-	<h3>4. 다음 글 또는 그래프의 내용과 같은 것을 고르십시오.</h3>
-	<h4><img src="uj/zajecia/25-26z/ljk4/testy/czytanie/2-1/img/4.png" alt="4"></h4>
+	<h3>[7~8] 다음 글 또는 그래프의 내용과 같은 것을 고르십시오.</h3>
+	<h4>7. <img src="uj/zajecia/25-26z/ljk4/testy/czytanie/3/img/7.png" alt="7"></h4>
 	<ol>
-		<li>동아리 지원은 일 년 동안 계속된다.</li>
-		<li>동아리는 고등학생들로만 구성되어야 한다.</li>
-		<li>동아리 활동비는 이백만 원까지 받을 수 있다. <strong class="correct">✓</strong></li>
-		<li>동아리 인원이 두세 명인 경우에도 신청할 수 있다.</li>
+		<li>주말에는 단체 할인을 받을 수 있다.</li>
+		<li>이 행사는 이번에 처음 열리는 행사이다.</li>
+		<li>특별권을 사면 놀이 시설 이용료가 할인된다.</li>
+		<li>지하철을 타고 가면 입장권을 싸게 살 수 있다. <strong class="correct">✓</strong></li>
+	</ol>
+</div>
+<div class="exam-question">
+	<h4>8. <img src="uj/zajecia/25-26z/ljk4/testy/czytanie/3/img/8.png" alt="7"></h4>
+	<ol>
+		<li>남녀 모두 부모님보다 친구에게 고민 상담을 많이 한다. <strong class="correct">✓</strong></li>
+		<li>남녀 모두 형제와 자매에게 고민 상담을 가장 많이 한다.</li>
+		<li>혼자서 고민을 해결하는 청소년은 여자보다 남자가 더 적다.</li>
+		<li>부모님에게 고민을 말하는 청소년은 남자보다 여자가 더 적다.</li>
 	</ol>
 </div>
 
 <div class="exam-question">
-	<h3>5. 다음 글 또는 그래프의 내용과 같은 것을 고르십시오.</h3>
+	<h3>[9~10] 다음 글 또는 그래프의 내용과 같은 것을 고르십시오.</h3>
+	<h4>9.</h4>
 	<ul>
-		<!-- <li>출연하다 - występować</li> -->
-		<li>녹화 - nagrywanie</li>
-		<!-- <li>무대 - scena</li> -->
-		<li>방청하다 - oglądać (np. występ)</li>
-		<li>선착순 - kto pierwszy, ten lepszy</li>
+		<li>가면 - maska</li>
+		<li>나타내다 - ukazać</li>
+		<li>표현하다 - wyrazić</li>
+		<!-- <li>행동하다 - zachowywać się</li> -->
+		<!-- <li>만족하다 - być zadowolonym (z czegoś)</li> -->
+		<!-- <li>성격 - osobowość, charakter</li> -->
+		<!-- <li>자랑하다 - chwalić się</li> -->
 	</ul>
 	<div class="topik-textbox">
-		<p>주말마다 서울 광화문 주변이 콘서트장으로 바뀐다. 바로 '광화문 콘서트'라는 프로그램 때문이다. 이 프로그램은 매회 가수 한 명이 출연해 10여곡의 노래를 부르는 음악 프로그램으로 다음 주 첫 방송을 앞두고 있다. 녹화는 광화문 앞 무대에서 일요일 오후 7시부터 시작되며 방청 신청은 프로그램 홈페이지를 통해 300명까지 선착순으로 받는다.</p>
+		<p>사람들은 가끔씩 지금과는 다른 내가 되고 싶어 한다. 이런 마음은 가면을 통해서 나타낼 수 있는데 가면을 쓰면 잠시 동안이지만 현실과 다른 나를 표현할 수 있다. 예를 들어 힘이 약한 사람이 호랑이 가면 쓰게 되면 호랑이처럼 힘이 세다고 생각한다. 그래서 정말 힘센 사람처럼 행동하게 되고 이를 통해 스스로 만족하게 된다.</p>
 	</div>
 	<ol>
-		<li>이 프로그램은 평일에 녹화를 진행한다.</li>
-		<li>광화문 콘서트는 오래된 음악 프로그램이다.</li>
-		<li>직접 가서 보려면 인터넷으로 신청해야 한다. <strong class="correct">✓</strong></li>
-		<li>이 프로그램에는 여러 명의 가수가 출연하다.</li>
+		<li>가면을 쓰면 성격을 바꿀 수 있다.</li>
+		<li>가면을 쓰면 현실을 더 잘 볼 수 있다.</li>
+		<li>가면으로 원하던 모습을 표현할 수 있다. <strong class="correct">✓</strong></li>
+		<li>힘을 자랑하기 위해서 호랑이 가면을 쓴다.</li>
 	</ol>
 </div>
-
 <div class="exam-question">
-	<h3>6. 다음을 순서에 맞게 배열한 것을 고르십시오.</h3>
+	<h4>10.</h4>
 	<ul>
-		<li>안정시키다 - uspokoić</li>
-		<li>재배하다 - zbierać</li>
-		<!-- <li>피하다 - unikać</li> -->
+		<!-- <li>초록 - zielony</li> -->
+		<li>콩나물 - kiełki sojowe</li>
+		<!-- <li>주부 - pani domu</li> -->
+		<li>천 - tkanina, materiał</li>
+		<li>덮다 - przykryć</li>
+		<!-- <li>기르다 - hodować</li> -->
+		<!-- <li>자라다 - rosnąć (o roślinach)</li> -->
+		<li>영양가 - wartości odżywcze</li>
+		<!-- <li>피로 - zmęczenie</li> -->
+		<!-- <li>회복 - regeneracja, usunięcie (zmęczenia)</li> -->
 	</ul>
 	<div class="topik-textbox">
-		<p>(가) 요즘 꽃차를 즐겨 마시는 사람들이 늘고 있다.</p>
-		<p>(나) 마음을 안정시키는 효과를 얻을 수 있기 때문이다.</p>
-		<p>(다) 깨끗하게 재배한 꽃으로 차를 만들어 마시는 것이 좋다.</p>
-		<p>(라) 그런데 길가에 피어 있는 꽃으로 차를 만드는 것은 피해야 한다.</p>
+		<p>최근 초록 콩나물을 찾는 주부들이 늘고 있다. 노란 콩나물은 보통 검은색 천으로 덮어 어두운 곳에서 기른다. 그러나 초록 콩나물은 천으로 가리지 않고 밝은 곳에서 자라게 한다. 햇빛을 받아 초록색으로 변한 콩나물은 노란 콩나물보다 영양가가 높다. 특히 초록 콩나물은 노란 콩나물보다 비타민이 많이 들어 있어서 피로 회복에 좋다.</p>
 	</div>
 	<ol>
-		<li>(가)-(나)-(라)-(다) <strong class="correct">✓</strong></li>
-		<li>(가)-(라)-(나)-(다)</li>
-		<li>(다)-(라)-(가)-(나)</li>
-		<li>(다)-(가)-(라)-(나)</li>
+		<li>노란 콩나물은 햇빛을 받고 자란다.</li>
+		<li>초록 콩나물은 검은색 천을 덮어서 키운다.</li>
+		<li>노란 콩나물은 초록 콩나물보다 피로 회복에 좋다.</li>
+		<li>초록 콩나물은 노란 콩나물에 비해 영양가가 많다. <strong class="correct">✓</strong></li>
 	</ol>
 </div>
 
 <div class="exam-question">
-	<h3>7. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)에 들어갈 말로 가장 알맞은 것을 고르십시오.</h3>
+	<h3>[11~12]. 다음을 순서에 맞게 배열한 것을 고르십시오.</h3>
+	<h4>11.</h4>
 	<ul>
-		<!-- <li>능력 - umiejętność</li> -->
-		<li>밀접하다 - być bliskim</li>
+		<!-- <li>재료 - składnik</li> -->
+		<li>제작 - tworzenie</li>
+		<!-- <li>비용 - koszt</li> -->
+		<li>선수 - zawodnik</li>
+		<!-- <li>재활용 - recyklizacja</li> -->
+		<li>소재 = 재료</li>
+		<!-- <li>운동복 - strój sportowy</li> -->
+		<!-- <li>시원하다 - być przewiewnym</li> -->
+	</ul>
+	<div class="topik-textbox">
+		<p>(가) 또한 재료 가격이 싸서 제작 비용도 적게 든다.</p>
+		<p>(나) 그중 하나가 운동선수들의 유니폼을 만드는 것이다.</p>
+		<p>(다) 플라스틱 병을 재활용하는 방법에는 여러 가지가 있다.</p>
+		<p>(라) 플라스틱 병을 소재로 해서 운동복을 만들면 가볍고 시원하다.</p>
+	</div>
+	<ol>
+		<li>(다)-(나)-(라)-(가) <strong class="correct">✓</strong></li>
+		<li>(다)-(라)-(나)-(가)</li>
+		<li>(라)-(가)-(나)-(다)</li>
+		<li>(라)-(나)-(가)-(다)</li>
+	</ol>
+</div>
+<div class="exam-question">
+	<h4>12.</h4>
+	<ul>
+		<!-- <li>네온사인 - neon</li> -->
+		<li>상가 = 가게들이 모여 있는 곳</li>
+		<!-- <li>불빛 - światło, oświetlenie</li> -->
+		<li>비용을 들이다 = 돈을 쓰다</li>
+		<li>대안 - alternatywa</li>
+		<li>모색하다 = 찾다</li>
+		<!-- <li>가로등 - latarnia</li> -->
+		<li>제 역할 - swoja rola</li>
+		<!-- <li>공공 시설물 - instalacje publiczne</li> -->
+		<!-- <li>최선 - najlepsze (np. rozwiązanie)</li> -->
+	</ul>
+	<div class="topik-textbox">
+		<p>(가) 네온사인, 상가의 불빛 등으로 길거리가 밝기 때문에 불필요하다는 것이다.</p>
+		<p>(나) 그런 일에 비용을 들이기보다 다른 대안은 없는지 모색해 보는 것이 더 낫다.</p>
+		<p>(다) 가로등이 제 역할을 못하고 있으니 없애자는 의견이 나오고 있다.</p>
+		<p>(라) 하지만 이미 설치해 놓은 공공 시설물을 없애는 것만이 최선은 아닐 것 것이다.</p>
+	</div>
+	<ol>
+		<li>(가)-(라)-(다)-(나)</li>
+		<li>(가)-(다)-(라)-(나)</li>
+		<li>(다)-(가)-(라)-(나) <strong class="correct">✓</strong></li>
+		<li>(다)-(나)-(라)-(가)</li>
+	</ol>
+</div>
+
+<div class="exam-question">
+	<h3>[13~14] (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)에 들어갈 말로 가장 알맞은 것을 고르십시오.</h3>
+	<h4>13.</h4>
+	<ul>
+		<li>환하다 - być szerokim (o uśmiechu)</li>
+		<li>둥글다 - być okrągłym</li>
+		<!-- <li>보름달 - księżyc w pełni</li> -->
+		<!-- <li>송편 - songpyeon (rodzaj ciasta ryżowego)</li> -->
+		<!-- <li>반달 - półksiężyc</li> -->
+		<!-- <li>의미하다 - oznaczać</li> -->
+		<li>완전하다 - być kompletnym</li>
+		<!-- <li>발전하다 - rozwijać się</li> -->
+		<!-- <li>희망 - nadzieja</li> -->
+	</ul>
+	<div class="topik-textbox">
+		<p>추석에는 환하고 둥근 보름달이 뜬다. 그런데 추석 때 먹는 송편은 보름달이 아닌 반달 모양이다. 이는 반달이 현재보다 더 나은 미래를 의미하기 때문이다. 즉 보름달은 밝고 완전한 모양이지만 시간이 지나면서 점점 작아지는 데 반해, 반들은 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;). 이처럼 송편의 반달 모양에는 앞으로 모든 일이 발전해 나가기를 바라는 희망이 담겨 있다.</p>
+	</div>
+	<ol>
+		<li>환하게 웃는 사람의 눈 모양과 비슷하다</li>
+		<li>보름달처럼 밝은 빛을 가지고 있지 않다</li>
+		<li>오래 지나지 않아 크고 환한 보름달이 된다 <strong class="correct">✓</strong></li>
+		<li>어두운 면과 밝은 면을 모두 포함하고 있다</li>
+	</ol>
+</div>
+<div class="exam-question">
+	<h3>[13~14] (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)에 들어갈 말로 가장 알맞은 것을 고르십시오.</h3>
+	<h4>14.</h4>
+	<ul>
+		<!-- <li>능력 - umiejętności</li> -->
+		<li>밀접하다 = 아주 가깝다</li>
+		<!-- <li>관련성 - związek, powiązanie</li> -->
 		<li>동작 - ruch</li>
-		<!-- <li>장치 - urządzenie</li> -->
-		<li>조언하다 - radzić</li>
+		<!-- <li>행동 - zachowanie</li> -->
+		<!-- <li>불과하다 - sprowadzać się (do czegoś), być tylko (czymś)</li> -->
+		<!-- <li>기억 - pamięć</li> -->
+		<li>장치 - urządzenie</li>
+		<li>떠올리다 - przypomnieć (sobie coś)</li>
+		<li>조언하다 - poradzić (komuś coś)</li>
 	</ul>
 	<div class="topik-textbox">
 		<p>언어를 사용하는 능력은 손가락과 밀접한 관련성이 있다. 손가락을 움직이는 동작은 단순한 행동에 불과한 것이 아니라 어휘 기억 장치의 문을 여는 열쇠와 같은 역할을 한다. 그러므로 손가락이 불편한 사람들은 평소보다 필요한 단어를 떠올리는 시간이 길어진다. 말을 잘하기 위해서 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 조언하는 것도 이런 이유 때문이다.</p>
@@ -121,18 +247,18 @@
 </div>
 
 <div class="exam-question">
-	<h3>[Bonus]. 다음을 읽고 물음에 답하십시오.</h3>
+	<h3>[Bonus 1]. 다음을 읽고 물음에 답하십시오.</h3>
 	<div class="topik-textbox">
 		<p>과일을 빨리 익히기 위해 화학 물질이 사용되기도 한다. 그러나 화학 물질로 익힌 과일은 겉은 익었지만 속이 잘 익지 않은 경우가 많다. 그래서 화학 물질로 익힌 과일은 대개 자연적으로 숙성된 과일에 비해 맛과 향이 떨어진다. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 화학 물질이 과일 껍질에 남게 될 수도 있다. 이런 과일을 지속적으로 먹으면 건강에 문제가 생기게 된다.</p>
 	</div>
-	<h4>8. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)에 들어갈 알맞은 것을 고르십시오.</h4>
+	<h4>B1-1. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)에 들어갈 알맞은 것을 고르십시오.</h4>
 	<ol>
 		<li>또는</li>
 		<li>또한 <strong class="correct">✓</strong></li>
 		<li>그래도</li>
 		<li>그러면</li>
 	</ol>
-	<h4>9. 이 글의 내용과 같은 것을 고르십시오.</h4>
+	<h4>B1-2. 이 글의 내용과 같은 것을 고르십시오.</h4>
 	<ol>
 		<li>과일을 껍질까지 먹으면 건강에 좋다.</li>
 		<li>과일 향을 좋게 만드는 화학 물질이 있다.</li>
@@ -140,6 +266,25 @@
 		<li>자연 숙성 과일이 인공 숙성 과일보다 맛이 더 낫다. <strong class="correct">✓</strong></li>
 	</ol>
 </div>
+<div class="exam-question">
+	<h3>[Bonus 2]. 다음을 읽고 물음에 답하십시오.</h3>
+	<div class="topik-textbox">
+		<p class="topik-textbox">운동할 때에는 호흡 방법이 중요하다. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 근육의 힘을 키우는 운동을 할 때에는 평상시와 다른 호흡법이 필요하다. 그래야 다치지 않고 운동 효 과도 높일 수 있기 때문이다. 먼저 근육에 힘을 줄 때 숨을 내쉬고 힘을 뺀 때 숨을 들이마셔야 한다. 또한 숨을 끊어 쉬거나 멈추지 말고 깊이 숨을 쉬어야 한다. 이렇게 하면 몸 구석구석으로 영양분과 산소가 잘 전달되어 근육이 더 강해진다.</p>
+	</div>
+	<h4>B2-1. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)에 들어갈 알맞은 것을 고르십시오.</h4>
+	<ol>
+		<li>특히 <strong class="correct">✓</strong></li>
+		<li>결국</li>
+		<li>혹시</li>
+		<li>비록</li>
+	</ol>
+	<h4>B2-2. 이 글의 내용과 같은 것을 고르십시오.</h4>
+	<ol>
+		<li>근육에 힘을 줄 때에는 숨을 들이마시는 것이 좋다.</li>
+		<li>호흡을 잘못하면 근육 운동을 하다가 다칠 수 있다. <strong class="correct">✓</strong></li>
+		<li>호흡을 짧게 끊어 쉴수록 몸에 산소가 잘 전달된다.</li>
+		<li>숨을 깊이 쉬는 것은 근육 운동의 효과를 떨어뜨린다.</li>
+	</ol>
+</div>
 
 </body></html>
-
