--- a/uj/index.html
+++ b/uj/index.html
@@ -19,22 +19,21 @@
 	Uniwersytet Jagielloński w Krakowie<br>
 	<hr>
 	kontakt: <a href="mailto:tomasz1.wilczynski@uj.edu.pl">tomasz1.wilczynski@uj.edu.pl</a><br>
-	konsultacje: piątek 13.00–14.00, pokój -1.15<br>
+	konsultacje: wtorek 18.30–19.30, pokój -1.15<br>
 </address>
 
 <h2>Zajęcia</h2>
 
-<h3>Semestr zimowy 2025/2026</h3>
+<h3>Semestr letni 2025/2026</h3>
 
 <ul>
-	<li><a href="uj/zajecia/25-26z/assk">Analiza stosunków społecznych w Korei na przykładach sztuki tradycyjnej i współczesnej</a></li>
-	<li>Introduction to Asian Studies: overview of research methods</li>
 	<li>Język koreański - poziom 1</li>
 	<li>Język koreański - poziom 2</li>
 	<li>Język koreański - poziom 3</li>
-	<li><a href="uj/zajecia/25-26z/klc3">Korean Language Class (3)</a></li>
-	<li><a href="uj/zajecia/25-26z/licc">Legacy and Influence of Confucian Culture on Modern Korean Society</a></li>
-	<li><a href="uj/zajecia/25-26z/ljk4">Lektorat języka koreańskiego - poziom 4</a></li>
+	<li><a href="uj/zajecia/25-26l/klc3">Korean Language Class (3)</a></li>
+	<li><!--a href="uj/zajecia/25-26l/kkp"-->Koreańska kultura pracy<!--/a--></li>
+	<li><!-- a href="uj/zajecia/25-26l/ljk5"-->Lektorat języka koreańskiego - poziom 5<!--/a--></li>
+	<li><!-- a href="uj/zajecia/25-26l/mkmb"-->Modern Korean in Media and Business<!--/a--></li>
 </ul>
 
 <table class="time-table">
@@ -44,74 +43,79 @@
 			<th>Wtorek</th>
 			<th>Środa</th>
 			<th>Czwartek</th>
-			<th>Piątek</th>
 		</tr>
 	</thead>
 	<tbody>
 		<tr>
-			<th>08.00–08.45</th>
-			<td rowspan="7"></td>
-			<td rowspan="3" class="schedule-lecture">LJK4</td>
-			<td rowspan="5"></td>
+			<th>09.45–13.00</th>
 			<td></td>
+			<td class="schedule-lecture">LJK5</td>
+			<td rowspan="2"></td>
 		</tr>
 		<tr>
-			<th>08.45–09.30</th>
-			<td rowspan="2" class="schedule-lecture">KLC3</td>
+			<th>13.15–13.50</th>
+			<td class="schedule-lecture" rowspan="2">KKP</td>
+			<td rowspan="3"></td>
 		</tr>
 		<tr>
-			<th>09.30–11.15</th>
+			<th>13.50–14.45</th>
+			<td class="schedule-lecture" rowspan="2">JK3</td>
 		</tr>
 		<tr>
-			<th>11.15–13.00</th>
-			<td rowspan="5"></td>
-			<td></td>
-		</tr>
-		<tr>
-			<th>13.00–13.50</th>
-			<td rowspan="2" class="schedule-presentation">Konsultacje</td>
-		</tr>
-		<tr>
-			<th>13.50–14.00</th>
-			<td rowspan="2" class="schedule-lecture">JK3</td>
-		</tr>
-		<tr>
-			<th>14.00–14.50</th>
-			<td rowspan="8"></td>
-		</tr>
-		<tr>
-			<th>15.00–15.25</th>
-			<td rowspan="3" class="schedule-lecture">ASSK</td>
+			<th>14.45–14.50</th>
 			<td rowspan="2"></td>
 		</tr>
 		<tr>
 			<th>15.25–15.30</th>
-			<td rowspan="3" class="schedule-lecture">JK2</td>
+			<td class="schedule-lecture" rowspan="3">JK2</td>
+			<td></td>
 		</tr>
 		<tr>
 			<th>15.30–16.15</th>
+			<td class="schedule-lecture" rowspan="4">MKMB</td>
 			<td class="schedule-lecture">JK1</td>
 		</tr>
 		<tr>
 			<th>16.15–16.20</th>
+			<td rowspan="2"></td>
+		</tr>
+		<tr>
+			<th>16.20–17.15</th>
+			<td rowspan="5"></td>
+		</tr>
+		<tr>
+			<th>17.15–18.15</th>
+			<td class="schedule-lecture" rowspan="4">KLC3</td>
+		</tr>
+		<tr>
+			<th>18.15–18.30</th>
 			<td></td>
-			<td rowspan="4"></td>
 		</tr>
 		<tr>
-			<th>16.45–17.30</th>
-			<td rowspan="2" class="schedule-lecture">LICC</td>
-			<td></td>
+			<th>18.30–19.30</th>
+			<td class="schedule-presentation">konsultacje</td>
 		</tr>
 		<tr>
-			<th>17.30–18.15</th>
-			<td rowspan="2" class="schedule-lecture">ITAS</td>
-		</tr>
-		<tr>
-			<th>18.30–20.00</th>
+			<th>19.30–20.00</th>
 			<td></td>
 		</tr>
 	</tbody>
 </table>
+
+<details>
+<summary class="h3">Semestr zimowy 2025/2026</summary>
+
+<ul>
+	<li>Analiza stosunków społecznych w Korei na przykładach sztuki tradycyjnej i współczesnej</li>
+	<li>Introduction to Asian Studies: overview of research methods</li>
+	<li>Język koreański - poziom 1</li>
+	<li>Język koreański - poziom 2</li>
+	<li>Język koreański - poziom 3</li>
+	<li>Korean Language Class (3)</li>
+	<li>Legacy and Influence of Confucian Culture on Modern Korean Society</li>
+	<li>Lektorat języka koreańskiego - poziom 4</li>
+</ul>
+</details>
 
 <details>
 <summary class="h3">Semestr letni 2024/2025</summary>
