--- a/uj/zajecia/25-26z/ljk4/testy/czytanie/1/index.html
+++ b/uj/zajecia/25-26z/ljk4/testy/czytanie/1/index.html
@@ -41,7 +41,7 @@
 	<h3>3. 다음은 무엇에 대한 글인지 고르십시오.</h3>
 	<h4><img src="uj/zajecia/25-26z/ljk4/testy/czytanie/1/img/3.png" alt="3"></h4>
 	<ol>
-		<li>고통 안전 <strong class="correct">✓</strong></li>
+		<li>교통 안전 <strong class="correct">✓</strong></li>
 		<li>전기 절약</li>
 		<li>예절 교육</li>
 		<li>환경 보호</li>
