--- a/uj/zajecia/25-26z/ljk4/testy/znaki/3/index854368745436548.html
+++ b/uj/zajecia/25-26z/ljk4/testy/znaki/3/index854368745436548.html
@@ -14,61 +14,82 @@
 <div class="exam-question">
 	<h1>Lektorat języka koreańskiego - poziom 4 (znaki chińskie)</h1>
 
-	<h2>Kolokwium 2</h2>
+	<h2>기말고사</h2>
 
-	<h3>1. Zastąp podkreślone w zdaniach znaki chińskie hangulem. (10 pkt.)</h3>
+	<h3>1. Zastąp podkreślone w zdaniach znaki chińskie hangulem. (15 pkt.)</h3>
 
 	<ol>
-		<li style="padding: 1em 0">食<u>費</u>는 대학생들의 생활비에서 큰 비중을 차지한다.</li>
-		<li style="padding: 1em 0">건강을 유지하기 위해서는 규칙적인 食<u>事</u>가 필수이다.</li>
-		<li style="padding: 1em 0">어머니는 시간이 갈수록 건강 食<u>品</u>에 관심이 높아지셨다.</li>
-		<li style="padding: 1em 0">한국어를 공부할 때는 文<u>章</u>을 번역하는 것이 가장 어렵다.</li>
-		<li style="padding: 1em 0"><u>原</u>文을 너무 의역하면 번역에는 많은 차이가 생길 수 있다.</li>
-		<li style="padding: 1em 0">날씨가 너무 더우면 食<u>慾</u>이 떨어져 아무것도 먹고 싶지 않다.</li>
-		<li style="padding: 1em 0">과거에 바닥에 앉아서 밥을 먹었지만 요즘은 食<u>卓</u>에서 먹는다.</li>
-		<li style="padding: 1em 0">이번 금요일에 다 같이 고급 食<u>堂</u>에서 회식하는 건 어떨까요?</li>
-		<li style="padding: 1em 0">학생들은 文<u>具店</u>에서 공책과 볼펜을 저렴하게 구매할 수 있다.</li>
-		<li style="padding: 1em 0">언어를 공부할 때는 <u>例</u>文을 통해서 단어를 쉽게 외울 수 있다.</li>
+		<li>북한은 <u><strong>單</strong></u>一민족국가로 널리 알려져 있다.</li>
+		<li>한국인들은 <u><strong>後</strong></u>食으로 커피를 마시는 것이 보통이다.</li>
+		<li><u><strong>萬</strong></u>一의 경우를 대비하려고 많은 돈을 저축하고 있다.</li>
+		<li>쌍둥이의 지문은 검사해서 비교하면 一<u><strong>致</strong></u>할 것입니다.</li>
+		<li>예술 작품을 감상하는 것은 나의 <u><strong>唯</strong></u>一한 취미 활동이다.</li>
+		<li>한국 청소년들은 맥도날드에와 같은 <u><strong>洋</strong></u>食을 즐겨먹는다.</li>
+		<li>비행기가 지연되어 一<u><strong>方的</strong></u>으로 약속을 미룰 수밖에 없었다.</li>
+		<li>견과류는 시험 공부할 때 집중하기 위해 제일 좋은 <u><strong>間</strong></u>食이다.</li>
+		<li>추석 전에 농부들이 가장 많이 거두는 <u><strong>穀</strong></u>食은 밀과 보리이다.</li>
+		<li>一<u><strong>時拂</strong></u>로 결제하면 추가요금은 없지만 할부 결제하면 있어요.</li>
+		<li>자연을 보호하기 위해서는 플라스틱 一<u><strong>回用</strong></u> 컵 사용을 줄여야 한다.</li>
+		<li>한국은 <u><strong>外</strong></u>食 가격이 더 저렴해서 폴란드에 비해 밥을 더 많이 사먹는다.</li>
+		<li>이 식당은 춤을 출 수 있는 공간이 넓어서 파티에 一<u><strong>行</strong></u>을 많이 초대해도 좋다.</li>
 	</ol>
 </div>
 
 
 
 <div class="exam-question">
-	<h3>2. Zastąp podkreślone w zdaniach słowa znakami chińskimi. (10 pkt.)</h3>
+	<h3>2. Zastąp podkreślone w zdaniach słowa znakami chińskimi. (13 pkt.)</h3>
 
 	<ul style="columns: 5">
-		<li>作</li>
-		<li>公</li>
-		<li>化</li>
-		<li>器</li>
-		<li>書</li>
-		<li>注</li>
-		<li>漢</li>
-		<li>糧</li>
-		<li>論</li>
-		<li>醋</li>
+		<li>等</li>
+		<li>定</li>
+		<li>飮</li>
+		<li>部</li>
+		<li>旦</li>
+		<li>會</li>
+		<li>統</li>
+		<li>同</li>
+		<li>第</li>
+		<li>過</li>
+		<li>菜</li>
+		<li>粉</li>
+		<li>般</li>
 	</ul>
 
 	<ol>
-		<li style="padding: .25em 0;"><u>한</u>문은 한국 중학교에서 선택과목이다.</li>
-		<li style="padding: .25em 0;">보건복지부에서는 청년단체에 <u>공</u>문을 보냈다.</li>
-		<li style="padding: .25em 0;">쓰기 수업 덕분에 <u>작</u>문 실력이 좋아지고 있어요.</li>
-		<li style="padding: .25em 0;">전쟁에서 달아나는 난민들에게는 식<u>량</u>이 절실하다.</li>
-		<li style="padding: .25em 0;">대학원을 졸업하려면 <u>논</u>문 심사에 반드시 합격해야 한다.</li>
-		<li style="padding: .25em 0;">일주일 전에 작성한 학술 문<u>서</u>를 컴퓨터에 보관하고 있다.</li>
-		<li style="padding: .25em 0;">제품을 저렴하게 구매하려면 인터넷에서 <u>주</u>문하는 것이 좋다.</li>
-		<li style="padding: .25em 0;">간장과 고춧가루로 양념장을 만든 후에는 식<u>초</u>를 조금 넣었어요.</li>
-		<li style="padding: .25em 0;">문<u>화</u>를 잘 이해하기 위해서는 언어를 배우는 것이 좋은 방법이다.</li>
-		<li style="padding: .25em 0;">아버지께서는 진지를 잡수신 후에 식<u>기</u>를 항상 깨끗이 씻고 보관하셔요.</li>
+		<li>비만에서 벗어나기 위해서는 <u><strong>과</strong></u>식을 자제해야 한다.</li>
+		<li>불닭볶음면은 전세계에 인기가 많은 한국 <u><strong>분</strong></u>식이다.</li>
+		<li>사찰음식은 <u><strong>채</strong></u>식 음식이라서 나물로 이루어져 있다.</li>
+		<li>교수와 학생들은 수업을 종강하고 함께 <u><strong>회</strong></u>식을 했다.</li>
+		<li>선생님은 <u><strong>동</strong></u>일한 조건으로 재시험을 실시하신답니다.</li>
+		<li>김연지는 우리 학과에서 연속으로 일<u><strong>등</strong></u>한 우등생이다.</li>
+		<li>매운 <u><strong>음</strong></u>식으로 스트레스를 해소하는 방법이 인기이다.</li>
+		<li>베를린 장벽이 무너지면서 동독과 서독이 <u><strong>통</strong></u>일되었다.</li>
+		<li>집에 도착하면 일<u><strong>단</strong></u>은 숙제부터 하고 산책도 꼭 할 거예요.</li>
+		<li>5포세대에 따르면 경제가 일<u><strong>반</strong></u> 생활을 어렵게 만들고 있단다.</li>
+		<li>지선이는 어릴 때는 <u><strong>제</strong></u>일 싫어했는데 지금은 아주 친한 친구이다.</li>
+		<li>대학 강의의 일<u><strong>부</strong></u>는 필수, 일<u><strong>부</strong></u>는 선택 과목으로 분류되어 있어요.</li>
+		<li>수술을 받고 병원에서 일<u><strong>정</strong></u>한 기간 동안 머물러야 하니 병가를 신청하려고 해요.</li>
 	</ol>
 </div>
 
 <div class="exam-question">
-	<h3>Bonus 1. Wyjaśnij, dlaczego znak 英 jest używany w odniesieniu do Wielkiej Brytanii oraz języka angielskiego. (1 pkt.)</h3>
+	<h3>3. Stwórz przykładowe zdanie z każdym z poniższych słów. (5 pkt.)</h3>
+
+	<ol>
+		<li>人口</li>
+		<li>化學</li>
+		<li>書店</li>
+		<li>水原</li>
+		<li>漢나라</li>
+	</ol>
+</div>
+
+<div class="exam-question">
+	<h3>Bonus 1. Wyjaśnij, czym różnią się piktogramy (np. 木, 日, 車) od ideogramów (np. 三, 中, 力). (1 pkt.)</h3>
 	<p>.............................................................................................................................</p>
 	<p>.............................................................................................................................</p>
-	<h3>Bonus 2. Wyjaśnij, z jakich znaków chińskich składa się słowo „식구” oraz czym różni się od słowa „가족”. (1 pkt.)</h3>
+	<h3>Bonus 2. Wyjaśnij, w jakim kontekście znaki chińskie są używane w gazetach południowokoreańskich. (1 pkt.)</h3>
 	<p>.............................................................................................................................</p>
 	<p>.............................................................................................................................</p>
 </div>
