--- a/viiilo/zajecia/25-26/jk3/index.html
+++ b/viiilo/zajecia/25-26/jk3/index.html
@@ -39,7 +39,7 @@
 			<tr>
 				<th scope="row">2</th>
 				<td>2025년 9월 25일</td>
-				<td class="schedule-lecture" colspan="2"></td>
+				<td class="schedule-lecture" colspan="2"><a href="viiilo/zajecia/25-26/jk3/zajecia/1">12. 저는 지니 씨에게 펜을 선물할 거예요</a></td>
 			</tr>
 			<tr>
 				<th scope="row">3</th>
