--- a/uj/zajecia/24-25z/wats3-1/index.html
+++ b/uj/zajecia/24-25z/wats3-1/index.html
@@ -205,7 +205,7 @@
 			<tr>
 				<td class="schedule-lecture">Zajęcia</td>
 				<td class="schedule-lecture">polityka</td>
-				<td class="schedule-lecture"><a href="uj/zajecia/24-25z/wats3-1/zajecia/7">윤 대통령 계엄 선포부터 탄핵 소추까지 5분 요약</td>
+				<td class="schedule-lecture"><a href="uj/zajecia/24-25z/wats3-1/zajecia/7">윤 대통령 계엄 선포부터 탄핵 소추까지 5분 요약</a></td>
 			</tr>
 		</tbody>
 		<tbody>
@@ -222,8 +222,8 @@
 				<th scope="row">10</th>
 				<td>20 grudnia 2024</td>
 				<td class="schedule-lecture">Zajęcia</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture">Boże Narodzenie</td>
+				<td class="schedule-lecture"><a href="uj/zajecia/24-25z/wats3-1/zajecia/9">“와! 산타 할아버지다”…연말 이웃나눔 ‘훈훈’</a></td>
 			</tr>
 		</tbody>
 		<tbody>
