--- a/viiilo/zajecia/24-25z/jk1/index.html
+++ b/viiilo/zajecia/24-25z/jk1/index.html
@@ -100,7 +100,7 @@
 			<tr>
 				<th scope="row">15</th>
 				<td>6 marca 2025</td>
-				<td class="schedule-lecture" rowspan="3"><a href="viiilo/zajecia/24-25z/jk1/zajecia/8">4과. 한국어를 사랑해요</a></td>
+				<td class="schedule-lecture" rowspan="3"><a href="viiilo/zajecia/24-25z/jk1/zajecia/8">4과. 한국어를 공부해요</a></td>
 				<td class="schedule-presentation" rowspan="3"><!--a href="viiilo/zajecia/24-25z/jk1/zajecia/8-1"></a--></td>
 			</tr>
 			<tr>
