--- a/viiilo/zajecia/24-25z/jk1/index.html
+++ b/viiilo/zajecia/24-25z/jk1/index.html
@@ -133,7 +133,7 @@
 				<th scope="row">22</th>
 				<td>12 czerwca 2025</td>
 				<td class="schedule-lecture" rowspan="2"><a href="viiilo/zajecia/24-25z/jk1/zajecia/11">7과. 일곱 시에 시작해요</a></td>
-				<td class="schedule-presentation" rowspan="2"></td>
+				<td class="schedule-presentation" rowspan="2">반말과 높임말</td>
 			</tr>
 			<tr>
 				<th scope="row">23</th>
