--- a/viiilo/zajecia/24-25z/jk2/index.html
+++ b/viiilo/zajecia/24-25z/jk2/index.html
@@ -169,8 +169,8 @@
 				<th scope="row">22</th>
 				<td>13 czerwca 2025</td>
 				<td class="schedule-lecture">Lekcja</td>
-				<td class="schedule-lecture" rowspan="2"><a href="viiilo/zajecia/24-25z/jk2/zajecia/11">10. 한국 음식을 만들 수 있어요?</a></td>
-				<td class="schedule-presentation" rowspan="2"></td>
+				<td class="schedule-lecture" rowspan="2"><a href="viiilo/zajecia/24-25z/jk2/zajecia/11">11. 한국 음식을 만들 수 있어요?</a></td>
+				<td class="schedule-presentation" rowspan="2"><a href="viiilo/zajecia/24-25z/jk2/zajecia/11-1">방탄소년단 - 봄날</a></td>
 			</tr>
 			<tr>
 				<th scope="row">23</th>
