--- a/uj/zajecia/24-25l/ljk5/index.html
+++ b/uj/zajecia/24-25l/ljk5/index.html
@@ -275,9 +275,8 @@
 			<tr>
 				<th scope="row" rowspan="2">10</th>
 				<td rowspan="2">28 maja 2025</td>
-				<td class="schedule-exam"><!--a href="uj/zajecia/24-25l/ljk5/testy/tlumaczenie/2"-->Kolokwium 2<!--/a--></td>
-				<td class="schedule-exam"></td>
-				<td class="schedule-exam"></td>
+				<td class="schedule-exam"><a href="uj/zajecia/24-25l/ljk5/testy/tlumaczenie/2">Kolokwium 2</a></td>
+				<td class="schedule-exam" rowspan="2">zwierzęta</td>
 			</tr>
 			<tr>
 				<td class="schedule-lecture" rowspan="2">Zajęcia</td>
