--- a/viiilo/zajecia/24-25z/jk1/index.html
+++ b/viiilo/zajecia/24-25z/jk1/index.html
@@ -52,7 +52,7 @@
 				<th scope="row">3</th>
 				<td>7 listopada 2024</td>
 				<td class="schedule-lecture">Lekcja 3</td>
-				<td class="schedule-lecture">Alfabet (한글) – spółgłoski</td>
+				<td class="schedule-lecture"><a href="viiilo/zajecia/24-25z/jk1/zajecia/3">Alfabet (한글) – spółgłoski</a></td>
 			</tr>
 		</tbody>
 		<tbody>
